# ml3d

./: .gitignore  1550_after_filtering.pcd  1650_after_filtering.pcd  24_filter_matrix.txt  24_matrix.txt  4625.pcd  4625_after_.pcd  4650.pcd  4650_after_.pcd  README.md  SN_0_test.pcd  SN_100_test.pcd  data.py  dcp.py  dcp_filter_matrix.txt  dcp_icp.ipynb  dcp_matrix.txt  gt.py  icp.py  icp_24__matrix.txt  icp_24_filter_matrix.txt  icp_filter_matrix.txt  icp_matrix.txt  requirements.txt  test.ipynb  test1.pcd  transformation.py  tree.txt  tum_test2.pcd
PointNetLK-master/: README.md  main.py  test.ipynb  test.py
PointNetLK-master/utils/: globset.py
dcp-master/: .gitignore  data.py  dcp_matrix.txt  model.py
filtering/: .gitignore  CMakeLists.txt  extract.cpp  readme.md
go-icp_cython-master/: go_icp_matrix.txt  test.ipynb
go-icp_cython-master/src/: jly_3ddt.hpp  jly_goicp.hpp
obj_12/: loss.txt
obj_19/: 新建 文本文档.txt
obj_25/: 新建 文本文档.txt
obj_71/: 新建 文本文档.txt
pcd_generator/: CMakeLists.txt  rgbd2pcd  rgbd2pcd.cpp
pcd_process/: README.md  pcdtopoinicloud.py  pcdtopointcloud.py
scenenet/: .gitignore  README.md  read_protobuf.py
simpleICP-master/: .gitignore  icp_matrix.txt  test.ipynb
simpleICP-master/simpleicp/: corrpts.py  optimization.py  pointcloud.py  simpleicp.py
test_case/: SN_1550_test.pcd  SN_1650_test.pcd  test.pcd  tum_test.pcd
